Fixed alignment issues with flares.

--- a/main.css
+++ b/main.css
@@ -7,8 +7,10 @@ html, body {
     padding: 0;
     background: #000;
     position: relative;
-
+    overflow: hidden;
+    scroll-behavior: fixed;
 }
+
 
 #debug-data {
     display: none;
@@ -16,12 +18,6 @@ html, body {
 .debug #debug-data {
     display: block;
     color: #fff;
-}
-
-@keyframes shimmerBackground {
-    0% {opacity: 0}
-    50% {opacity: 1}
-    100% {opacity: 0}
 }
 
 .shim {
@@ -54,7 +50,7 @@ html, body {
 
 @-webkit-keyframes pulse {
   0% {
-    -webkit-box-shadow: 0 0 0 0 rgba(255,255,255, 0.4);
+    -webkit-box-shadow: 0 0 0 0 rgba(255,255,255, 0.6);
   }
   70% {
       -webkit-box-shadow: 0 0 0 10px rgba(255,255,255, 0);
@@ -65,7 +61,7 @@ html, body {
 }
 @keyframes pulse {
   0% {
-    -moz-box-shadow: 0 0 0 0 rgba(255,255,255, 0.4);
+    -moz-box-shadow: 0 0 0 0 rgba(255,255,255, 0.6);
     box-shadow: 0 0 0 0 rgba(255,255,255, 0.4);
   }
   70% {
